# showwork

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HARDENING-SUMMARY.md  LICENSE  README.md  SPEC.md  pyproject.toml  todo.md
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
.showwork/: audit-session-pi-furnace-path-boundary-20260716.md  audit-session-showwork-docs-harness-citation.md  audit-session-v02-phase-1.md  claims-2026-07-09.jsonl  claims-2026-07-10.jsonl  claims-2026-07-11.jsonl  claims-2026-07-16.jsonl  claims-2026-07-17.jsonl  claims-2026-07-18.jsonl  claims-2026-07-19.jsonl  claims-2026-07-20.jsonl  sessions.jsonl
actions/verify/: action.yml
docs/: adapters.md  case-study-metrics.json  case-study.md  ci.md  claude-code.md  compliance.md  concurrency.md  evidence-pack-sample.md  false-done-rate-day0.json  false-done-rate-day0.md  false-done-rate.md  fleet-adoption.md  live-enforcement.md
js/showwork-audit/: index.mjs  package.json  test.mjs
scripts/: build_public_dashboard.py  derive_case_study.py  evidence_pack.py  false_done_rate.py  make_chain_fixtures.py  render_dashboard.py  replay_transcripts.py  run_tests.py  sanitize_replay.py
src/showwork/: __init__.py  audit.py  budgets.py  checks.py  cli.py  control.py  dashboard.py  (+3 more)
tests/: conftest.py  test_audit.py  test_budgets.py  test_case_study_derivation.py  test_chain_fixtures.py  test_checks.py  test_cli.py  test_control.py  test_evidence_pack.py  test_false_done_rate.py  test_guards.py  test_hooks.py  test_run.py  test_spec_conformance.py
(+16 files in other folders)
